src/tests/snapshots/eventql_parser__tests__analysis__infer_wrong_where_clause_2.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    TypeMismatch:
      - 2
      - 48
      - String
      - Number
