src/tests/snapshots/eventql_parser__tests__analysis__rename_duplicate_variable_names.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    BindingAlreadyExists:
      - 2
      - 6
      - e
