src/tests/snapshots/eventql_parser__tests__analysis__rename_non_existing_variable.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    VariableUndeclared:
      - 2
      - 7
      - f
