src/tests/snapshots/eventql_parser__tests__analysis__typecheck_datetime_contravariance_1.snap
---
source: src/tests/analysis.rs
expression: "analysis.analyze_expr(&AnalysisContext::default(), &expr, Type::Date)"
---
Ok: Date
